# idunn

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .licenserc.yaml  Justfile  flake.nix  idunn.cabal  treefmt.nix
cbits/include/idunn/: audio.h  gpu.h  logger.h  physics.h  platform.h
cbits/src/: audio.cpp  audio.hpp  flags.hpp  gpu.cpp  gpu.hpp  logger.cpp  logger.hpp  physics.cpp  physics.hpp  platform.cpp  platform.hpp  pool.hpp
demo/: Main.hs
shaders/: basic.slang
src/: Idunn.hs
src/Idunn/: Audio.hs  Core.hs  Gpu.hs  Graphics.hs  Input.hs  Logger.hs  Physics.hs  Platform.hs  Resource.hs  TypeLevel.hs  Vector.hs  Window.hs  World.hs
src/Idunn/Audio/: FFI.hs
src/Idunn/Gpu/: FFI.hs
src/Idunn/Linear/: Mat.hs  Vec.hs
src/Idunn/Logger/: FFI.hs
src/Idunn/Physics/: FFI.hs
src/Idunn/Platform/: FFI.hs
