cabal-version: 3.8
name: idunn
version: 0.1.0
build-type: Simple
license: AGPL-3.0-or-later
license-file: LICENSE

source-repository head
  type: git
  location: https://github.com/aveltras/idunn

common common
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wno-ambiguous-fields
    -Wpartial-fields
    -Wredundant-constraints
    -Werror

library
  import: common
  hs-source-dirs: src
  build-depends:
    apecs,
    base,
    bytestring,
    containers,
    hs-bindgen,
    hs-bindgen-runtime,
    mtl,
    reflex,
    resourcet,
    text,
    unliftio,

  extra-libraries:
    SDL3
    stdc++

  cxx-sources:
    cbits/src/gpu.cpp
    cbits/src/logger.cpp
    cbits/src/platform.cpp

  include-dirs:
    cbits/include

  install-includes:
    idunn/gpu.h
    idunn/logger.h
    idunn/platform.h

  exposed-modules:
    Idunn

  other-modules:
    Idunn.Gpu
    Idunn.Gpu.FFI
    Idunn.Logger
    Idunn.Logger.FFI
    Idunn.Platform
    Idunn.Platform.FFI

executable demo
  import: common
  main-is: Main.hs
  hs-source-dirs: demo
  ghc-options: -threaded
  build-depends:
    base,
    idunn,
