cabal-version: 3.8
name: idunn
version: 0.1.0
build-type: Simple
license: AGPL-3.0-or-later
license-file: LICENSE
data-files:
  demo/assets/*
  shaders/*.slang

source-repository head
  type: git
  location: https://github.com/aveltras/idunn

flag asan
  default: False
  description: Enable Address Sanitizer
  manual: True

common common
  default-language: GHC2024
  default-extensions:
    DuplicateRecordFields
    OverloadedRecordDot
    OverloadedStrings

  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-deriving-strategies
    -Wno-ambiguous-fields
    -Wpartial-fields
    -Wredundant-constraints

library
  import: common
  hs-source-dirs: src
  build-depends:
    apecs,
    base,
    bytestring,
    clock,
    containers,
    dependent-sum,
    hs-bindgen,
    hs-bindgen-runtime,
    mtl,
    ref-tf,
    reflex,
    resourcet,
    template-haskell,
    text,
    time,
    typerep-map,
    unliftio,
    vector,

  extra-libraries:
    Jolt
    SDL3
    glm
    slang
    stdc++

  ghc-options:
    -g3
    -fno-ignore-asserts

  cc-options:
    -g
    -O1
    -fno-omit-frame-pointer
    -std=c23

  c-sources:
    vendor/miniaudio/miniaudio.c

  cxx-options:
    -std=c++20
    -g
    -O1
    -fno-omit-frame-pointer

  cxx-sources:
    cbits/src/audio.cpp
    cbits/src/gpu.cpp
    cbits/src/logger.cpp
    cbits/src/physics.cpp
    cbits/src/platform.cpp
    vendor/SPIRV-Reflect/spirv_reflect.cpp

  include-dirs:
    cbits/include
    vendor/SPIRV-Reflect
    vendor/Vulkan-Utility-Libraries/include
    vendor/miniaudio
    vendor/volk

  install-includes:
    idunn/gpu.h
    idunn/logger.h
    idunn/platform.h

  exposed-modules:
    Idunn

  autogen-modules:
    Paths_idunn

  other-modules:
    Idunn.Audio
    Idunn.Audio.FFI
    Idunn.Core
    Idunn.Gpu
    Idunn.Gpu.FFI
    Idunn.Graphics
    Idunn.Input
    Idunn.Linear.Mat
    Idunn.Linear.Vec
    Idunn.Logger
    Idunn.Logger.FFI
    Idunn.Physics
    Idunn.Physics.FFI
    Idunn.Platform
    Idunn.Platform.FFI
    Idunn.TypeLevel
    Idunn.Vector
    Idunn.Window
    Idunn.World
    Paths_idunn

  if flag(asan)
    ld-options: -fsanitize=address
    cxx-options: -fsanitize=address

executable demo
  import: common
  main-is: Main.hs
  hs-source-dirs: demo
  ghc-options: -threaded
  other-modules: Paths_idunn
  build-depends:
    apecs,
    base,
    containers,
    idunn,
